[package]
name = "wstunnel"
version = "9.7.0"
edition = "2021"
repository = "https://github.com/erebe/wstunnel.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.11", features = [] }
anyhow = "1.0.86"
async-trait = "0.1.80"
base64 = "0.22.1"
scopeguard = "1.2.0"

bb8 = { version = "0.8", features = [] }
bytes = { version = "1.6.0", features = [] }
clap = { version = "4.5.6", features = ["derive", "env"] }
fast-socks5 = { version = "0.9.6", features = [] }
fastwebsockets = { version = "0.7.2", features = ["upgrade", "simd", "unstable-split"] }
futures-util = { version = "0.3.30" }
hickory-resolver = { version = "0.24.1", features = ["tokio", "dns-over-https-rustls", "dns-over-rustls", "native-certs"] }
ppp = { version = "2.2.0", features = [] }

# For config file parsing
regex = { version = "1.10.4", default-features = false, features = ["std", "perf"] }
serde_regex = "1.1.0"
serde_yaml = { version = "0.9.34", features = [] }
ipnet = { version = "2.9.0", features = ["serde"] }

hyper = { version = "1.3.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.5", features = ["tokio", "server", "server-auto"] }
http-body-util = { version = "0.1.1" }
jsonwebtoken = { version = "9.3.0", default-features = false }
log = "0.4.21"
nix = { version = "0.29.0", features = ["socket", "net", "uio"] }
once_cell = { version = "1.19.0", features = [] }
parking_lot = "0.12.3"
pin-project = "1"
notify = { version = "6.1.1", features = [] }

rustls-native-certs = { version = "0.7.0", features = [] }
rustls-pemfile = { version = "2.1.2", features = [] }
x509-parser = "0.16.0"
serde = { version = "1.0.203", features = ["derive"] }
socket2 = { version = "0.5.7", features = [] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["net"] }

[target.'cfg(any(os = "linux", os = "macos"))'.dependencies]
tokio-rustls = { version = "0.26.0", features = [] }
[target.'cfg(not(any(os = "linux", os = "macos")))'.dependencies]
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "tls12", "ring"] }

tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "local-time"] }
url = "2.5.0"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v7", "serde"] }

[target.'cfg(not(target_family = "unix"))'.dependencies]
crossterm = { version = "0.27.0" }
tokio-util = { version = "0.7.11", features = ["io"] }

[target.'cfg(target_family = "unix")'.dependencies]
tokio-fd = "0.3.0"

[dev-dependencies]
testcontainers = "0.17.0"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
opt-level = 3
debug = 0
strip = "symbols"

[profile.release-with-symbols]
inherits = "release"
strip = false
