[package]
name = "wstunnel"
version = "10.1.6"
edition = "2021"
repository = "https://github.com/erebe/wstunnel.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.11", features = [] }
anyhow = "1.0.94"
base64 = "0.22.1"
scopeguard = "1.2.0"

bb8 = { version = "0.9.0", features = [] }
bytes = { version = "1.9.0", features = [] }
clap = { version = "4.5.23", features = ["derive", "env"] }
fast-socks5 = { version = "0.9.6", features = [] }
fastwebsockets = { git = "https://github.com/erebe/fastwebsockets.git", features = ["upgrade", "simd", "unstable-split"] }
futures-util = { version = "0.3.31" }
hickory-resolver = { version = "0.24.2", features = ["tokio", "dns-over-https-rustls", "dns-over-rustls", "native-certs"] }
ppp = { version = "2.2.0", features = [] }
async-channel = { version = "2.3.1", features = [] }
arc-swap = { version = "1.7.1", features = [] }

fdlimit = "0.3.0"

# For config file parsing
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
serde_regex = "1.1.0"
serde_yaml = { version = "0.9.34", features = [] }
ipnet = { version = "2.10.1", features = ["serde"] }

hyper = { version = "1.5.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.10", features = ["tokio", "server", "server-auto"] }
http-body-util = { version = "0.1.2" }
jsonwebtoken = { version = "9.3.0", default-features = false }
log = "0.4.22"
nix = { version = "0.29.0", features = ["socket", "net", "uio"] }
parking_lot = "0.12.3"
pin-project = "1"
notify = { version = "7.0.0", features = [] }

rustls-native-certs = { version = "0.8.1", features = [] }
rustls-pemfile = { version = "2.2.0", features = [] }
x509-parser = "0.16.0"
serde = { version = "1.0.216", features = ["derive"] }
socket2 = { version = "0.5.8", features = [] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }

tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "local-time"] }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v7", "serde"] }

[target.'cfg(not(target_family = "unix"))'.dependencies]
crossterm = { version = "0.28.1" }
tokio-util = { version = "0.7.13", features = ["io"] }

[target.'cfg(target_family = "unix")'.dependencies]
tokio-fd = "0.3.0"

[target.'cfg(all(any(target_os = "linux", target_os = "macos"), any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
tokio-rustls = { version = "0.26.1", features = [] }
rcgen = { version = "0.13.1", default-features = false, features = ["aws_lc_rs"] }

[target.'cfg(not(all(any(target_os = "linux", target_os = "macos"), any(target_arch = "x86_64", target_arch = "aarch64"))))'.dependencies]
tokio-rustls = { version = "0.26.1", default-features = false, features = ["logging", "tls12", "ring"] }
rcgen = { version = "0.13.1", default-features = false, features = ["ring"] }

[dev-dependencies]
testcontainers = "0.23.1"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
opt-level = 3
debug = 0
strip = "symbols"

[profile.release-with-symbols]
inherits = "release"
strip = false
