name:                wstunnel
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/wstunnel#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tunnel, Protocols, Utils
  build-depends:       base
                     , classy-prelude
                     , bytestring
                     , async
                     , unordered-containers
                     , network
                     , streaming-commons
                     , websockets
                     , network-conduit-tls
                     , connection
                     , hslogger
                     , base64-bytestring >= 1.0

  default-language:    Haskell2010

executable wstunnel
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wstunnel
                     , cmdargs
                     , classy-prelude
                     , bytestring
                     , hslogger

  default-language:    Haskell2010

test-suite wstunnel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wstunnel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wstunnel
