name:                wstunnel
version:             0.4.1.0
synopsis:            Tunneling program over websocket protocol
description:         For more information regarding wstunnel, please refer to README.md
homepage:            https://github.com/githubuser/wstunnel#readme
license:             BSD3
license-file:        LICENSE
author:              Erèbe
maintainer:          github@erebe.eu
copyright:           2021 Erèbe
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tunnel, Protocols, Types, Logger, Socks5, Credentials, HttpProxy
  default-extensions:  NoImplicitPrelude, ScopedTypeVariables, BangPatterns, RecordWildCards
  build-depends:       async
                     , base >= 4.5 && < 5
                     , base64-bytestring >= 1.0
                     , binary >= 0.7
                     , bytestring
                     , classy-prelude
                     , connection
                     , hslogger
                     , mtl
                     , network 
                     , network-conduit-tls
                     , streaming-commons
                     , text >= 1.2.2.1
                     , unordered-containers
                     , websockets >= 0.12.4.0
                     , iproute
                     , case-insensitive

  default-language:    Haskell2010

test-suite wstunnel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions:  NoImplicitPrelude, ScopedTypeVariables, BangPatterns, RecordWildCards
  build-depends:       base >= 4.5 && < 5
                     , async
                     , text >= 1.2.2.1
                     , classy-prelude
                     , bytestring
                     , network
                     , network-conduit-tls
                     , streaming-commons
                     , wstunnel
                     , hspec
                     , binary
                     , case-insensitive
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wstunnel

executable wstunnel
  hs-source-dirs:      app
  main-is:             Main.hs
  default-extensions:  NoImplicitPrelude, ScopedTypeVariables, BangPatterns, RecordWildCards
  ghc-options:         -threaded
                       -O3
                       -rtsopts "-with-rtsopts=-N -qb -qg"
  build-depends:       base >= 4.5 && < 5
                     , bytestring
                     , classy-prelude
                     , cmdargs
                     , hslogger
                     , text >= 1.2.2.1
                     , async
                     , wstunnel
                     , case-insensitive

  default-language:    Haskell2010
