[package]
name = "wstunnel-cli"
version = "10.5.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive", "env"] }
fdlimit = "0.3.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "local-time"] }
wstunnel = { path = "../wstunnel", default-features = false, features = ["clap"] }

tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = ["aws-lc-rs"]
jemalloc = ["dep:tikv-jemallocator"]
aws-lc-rs = ["wstunnel/aws-lc-rs"]
ring = ["wstunnel/ring"]
aws-lc-rs-bindgen = ["wstunnel/aws-lc-rs-bindgen"]

[[bin]]
name = "wstunnel"
path = "src/main.rs"
