[package]
name = "wstunnel"
version = "10.5.4"
edition = "2024"
repository = "https://github.com/erebe/wstunnel.git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.12", features = [] }
anyhow = "1.0.102"
base64 = "0.22.1"
scopeguard = "1.2.0"

bb8 = { version = "0.9.1", features = [] }
bytes = { version = "1.11.1", features = [] }
clap = { version = "4.6.1", features = ["derive", "env"], optional = true }
fast-socks5 = { version = "1.0.0", features = [] }
fastwebsockets = { version = "0.10.0", features = ["upgrade", "simd", "unstable-split"] }
futures-util = { version = "0.3.32" }
ppp = { version = "2.3.0", features = [] }
async-channel = { version = "2.5.0", features = [] }
arc-swap = { version = "1.9.1", features = [] }

# For config file parsing
regex = { version = "1.12.3", default-features = false, features = ["std", "perf"] }
serde_regex = "1.1.0"
serde_yaml = { version = "0.9.34", features = [] }
ipnet = { version = "2.12.0", features = ["serde"] }

hyper = { version = "1.9.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server", "server-auto"] }
http-body-util = { version = "0.1.3" }
jsonwebtoken = { version = "10.3.0", default-features = false }
log = "0.4.29"
nix = { version = "0.31.2", features = ["socket", "net", "uio"] }
parking_lot = "0.12.5"
pin-project = "1"
notify = { version = "8.2.0", features = [] }
httparse = { version = "1.10.1", features = [] }

rustls-native-certs = { version = "0.8.3", features = [] }
rustls-pemfile = { version = "2.2.0", features = [] }
x509-parser = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
socket2 = { version = "0.6.3", features = ["all"] }
tokio = { version = "1.52.1", features = ["io-std", "net", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }

tracing = { version = "0.1.44", features = ["log"] }
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.23.1", features = ["v7", "serde"] }
derive_more = { version = "2.1.1", features = ["display", "error"] }

tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12"] }
rcgen = { version = "0.14.7", default-features = false, features = [] }
hickory-resolver = { version = "0.26.0", default-features = false, features = [
  "system-config",
  "tokio",
] }
aws-lc-rs = { version = "*", optional = true }

[target.'cfg(not(target_family = "unix"))'.dependencies]
crossterm = { version = "0.29.0" }
tokio-util = { version = "0.7.18", features = ["io"] }

[target.'cfg(target_family = "unix")'.dependencies]
tokio-fd = "0.3.0"

[dev-dependencies]
testcontainers = "0.27.3"
test-case = "3.3.1"
collection_macros = "0.2.0"
rstest = "0.26.1"
serial_test = "3.4.0"
derive_more = { version = "2.1.1", features = ["from"] }
get_if_addrs = "0.5.3"

[features]
default = ["aws-lc-rs"]
clap = ["dep:clap"]
aws-lc-rs = [
  "tokio-rustls/aws-lc-rs",
  "rcgen/aws_lc_rs",
  "hickory-resolver/tls-aws-lc-rs",
  "hickory-resolver/https-aws-lc-rs",
  "jsonwebtoken/aws_lc_rs"
]
aws-lc-rs-bindgen = ["dep:aws-lc-rs", "aws-lc-rs/bindgen"]
ring = ["tokio-rustls/ring", "rcgen/ring", "hickory-resolver/tls-ring", "hickory-resolver/https-ring", "jsonwebtoken/rust_crypto"]
